final google home page yay!

--- a/index.html
+++ b/index.html
@@ -4,29 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>Google</title>
     <link rel="shortcut icon" type="image/png" href="img/google-favicon-128.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav>
+    <!-- <div class="nav-bar">
+        <ul>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Store</a>
+            </li>
+        </ul>
         <ul>
             <li>
                 <a href="#">Gmail</a>
             </li>
             <li>
-                <a href="#">Imagenes</a>
+                <a href="#">Images</a>
+            </li>
+            <li class="hover-icon">
+                <a href="#"><i class="material-icons">apps</i></a>
             </li>
             <li>
-                <a href="#"><i id="gridIcon" alt="Google Apps">hola</i></a>
-            </li>
-            <li>
-                <a href="#">img</a>
-            </li>
-            <li>
-                <a href="#">img</a>
+                <a href="#" class="sign-in"><strong>Sign in</strong></a>
             </li>
         </ul>
-    </nav>
+    </div> -->
+    <div class="main">
+            <div class="nav-bar">
+                    <ul>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Store</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="#">Gmail</a>
+                        </li>
+                        <li>
+                            <a href="#">Images</a>
+                        </li>
+                        <li class="hover-icon">
+                            <a href="#"><i class="material-icons">apps</i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="sign-in"><strong>Sign in</strong></a>
+                        </li>
+                    </ul>
+                </div>
+        <div class="search">
+            <form action="search.html">
+                <div>
+                    <img src="./img/googlelogo_color_272x92dp.png" alt="Google Image">
+                </div>
+                <div>
+                    <input type="text">
+                </div>
+                <div>
+                    <input class="btn" type="submit" value="Google Search">
+                    <a class="btn" href="#">I'm feeling lucky</a>
+                </div>  
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <span class="span-country">Nicaragua</span>
+        </div>
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="#">Advertising</a>
+                </li>
+                <li>
+                    <a href="#">Business</a> 
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Privacy</a>
+                </li>
+                <li>
+                    <a href="#">Terms</a>
+                </li>
+                <li>
+                    <a href="#">Settings</a>
+                </li>
+            </ul>
+        </div>
+    </div>    
 </body>
 </html>
